align fix

--- a/css/custom.css
+++ b/css/custom.css
@@ -162,6 +162,10 @@
     color:#93a4aa
 }
 
+.align-left {
+    text-align: left;
+}
+
 .project-img {
     height:15em;
     border-radius:0.5em;
